# PRobe

./: .gitignore  README.md  baseline.py  baseline_results.json  pyproject.toml  scripted_baseline.py  train_grpo.py  train_grpo_colab.ipynb
.claude/: settings.local.json
CodeReviewAgent/: README.md  models.py  openenv.yaml
CodeReviewAgent/server/: CodeReviewAgent_environment.py  app.py  grader.py  tasks.py
agent/: models.py
environment/: _import_compat.py  graders.py  mutator.py  probe_environment.py  scanner.py
outputs/: training.jsonl
reports/: JUDGE_REPORT.md  baseline.json
training/: eval_report.py  train_grpo.py
