# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-PRobe"
version = "0.1.0"
description = "PRobe — Pull Request Investigation Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
training = [
    # GRPO training stack (used by training/train_grpo.py)
    "torch",
    "transformers",
    "trl>=0.12",
    "datasets",
    "accelerate",
    "peft",
    # Optional but commonly needed for 4-bit fine-tuning
    "bitsandbytes",
    # Optional (plots); script degrades gracefully if missing
    "matplotlib",
]
unsloth = [
    # Optional accelerator for 4-bit LoRA; install only when supported on the platform.
    "unsloth",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
server = "environment.app:main"

[tool.setuptools]
include-package-data = true
packages = ["agent", "environment", "training"]
package-dir = { "" = "." }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
]
